# molgrep

./: .flake8  README.md  pyproject.toml
.github/workflows/: tests.yml
src/molgrep/: __init__.py
tests/: test_molgrep.py
